--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home - Solar Energy</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="img/logo.jpg" alt="">
+        <h1>
+            Inholand Solar Energy
+        </h1>
+        <h2>
+            Make the world a better place
+        </h2>
+    </header>
+
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="howsolarworks.html">How solar works</a></li>
+            <li><a href="eusolar.html"></a>Eu Solar</li>
+            <li><a href="contact.html">contact</a></li>
+        </ul>
+    </nav>
+    <main>
+
+        <video src="" controls="hidden"></video>
+
+        <article>
+            <img src="/img/product1.jpg" alt="">
+        </article>
+
+        <article>
+            <img src="/img/product1.jpg" alt="">
+        </article>
+
+        <article>
+            <img src="/img/product1.jpg" alt="">
+        </article>
+
+        <aside>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </aside>
+    </main>
+    <footer>
+        <p>
+            &copy; Stephen Holden 2020
+        </p>
+    </footer>
 </body>
+
 </html>
