--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="howsolarworks.html">How solar works</a></li>
-            <li><a href="eusolar.html"></a>Eu Solar</li>
+            <li><a href="eusolar.html">Eu Solar</a></li>
             <li><a href="contact.html">contact</a></li>
         </ul>
     </nav>
