Add dummy text & images

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,13 @@
             </fieldset>
             <input type="submit">
         </form>
+
+        <aside>
+            <img src="/img/product1.jpg" alt="">
+            <a href="https://www.ikwilzonneenergie.nl/">advertisement</a>
+            <img src="/img/product1.jpg" alt="">
+            <img src="/img/product1.jpg" alt="">
+        </aside>
     </main>
     <footer>
         <p>
