--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -29,18 +29,130 @@
     </nav>
     <main>
 
-        <video src="" controls="hidden"></video>
-
         <article>
+            <h3>Solar Panels</h3>
             <img src="/img/product1.jpg" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna
+                nunc porttitor massa, sit amet pellentesque
+                metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
+                Nulla lorem libero, scelerisque eget tincidunt
+                nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non
+                convallis aliquam, elit urna pharetra turpis, eu
+                pellentesque dui risus at sapien. Suspendisse at scelerisque ex, pharetra mollis neque. Suspendisse et
+                laoreet dui. Morbi est diam, posuere eget
+                dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Nam efficitur nisl magna,
+                et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales
+                magna ex, fringilla laoreet leo blandit nec.
+                Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum posuere sem, eget posuere
+                velit elementum eu.
+            </p>
         </article>
 
         <article>
+            <h3>Charge Controller</h3>
             <img src="/img/product1.jpg" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna
+                nunc porttitor massa, sit amet pellentesque
+                metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
+                Nulla lorem libero, scelerisque eget tincidunt
+                nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non
+                convallis aliquam, elit urna pharetra turpis, eu
+                pellentesque dui risus at sapien. Suspendisse at scelerisque ex, pharetra mollis neque. Suspendisse et
+                laoreet dui. Morbi est diam, posuere eget
+                dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Nam efficitur nisl magna,
+                et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales
+                magna ex, fringilla laoreet leo blandit nec.
+                Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum posuere sem, eget posuere
+                velit elementum eu.
+            </p>
         </article>
 
         <article>
+            <h3>Battery System</h3>
             <img src="/img/product1.jpg" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna
+                nunc porttitor massa, sit amet pellentesque
+                metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
+                Nulla lorem libero, scelerisque eget tincidunt
+                nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non
+                convallis aliquam, elit urna pharetra turpis, eu
+                pellentesque dui risus at sapien. Suspendisse at scelerisque ex, pharetra mollis neque. Suspendisse et
+                laoreet dui. Morbi est diam, posuere eget
+                dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Nam efficitur nisl magna,
+                et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales
+                magna ex, fringilla laoreet leo blandit nec.
+                Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum posuere sem, eget posuere
+                velit elementum eu.
+            </p>
+        </article>
+
+        <article>
+            <h3>DC Power</h3>
+            <img src="/img/product1.jpg" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna
+                nunc porttitor massa, sit amet pellentesque
+                metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
+                Nulla lorem libero, scelerisque eget tincidunt
+                nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non
+                convallis aliquam, elit urna pharetra turpis, eu
+                pellentesque dui risus at sapien. Suspendisse at scelerisque ex, pharetra mollis neque. Suspendisse et
+                laoreet dui. Morbi est diam, posuere eget
+                dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Nam efficitur nisl magna,
+                et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales
+                magna ex, fringilla laoreet leo blandit nec.
+                Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum posuere sem, eget posuere
+                velit elementum eu.
+            </p>
+        </article>
+
+        <article>
+            <h3>Inverter</h3>
+            <img src="/img/product1.jpg" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna
+                nunc porttitor massa, sit amet pellentesque
+                metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
+                Nulla lorem libero, scelerisque eget tincidunt
+                nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non
+                convallis aliquam, elit urna pharetra turpis, eu
+                pellentesque dui risus at sapien. Suspendisse at scelerisque ex, pharetra mollis neque. Suspendisse et
+                laoreet dui. Morbi est diam, posuere eget
+                dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Nam efficitur nisl magna,
+                et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales
+                magna ex, fringilla laoreet leo blandit nec.
+                Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum posuere sem, eget posuere
+                velit elementum eu.
+            </p>
+        </article>
+
+        <article>
+            <h3>AC Power</h3>
+            <img src="/img/product1.jpg" alt="">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna
+                nunc porttitor massa, sit amet pellentesque
+                metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
+                Nulla lorem libero, scelerisque eget tincidunt
+                nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non
+                convallis aliquam, elit urna pharetra turpis, eu
+                pellentesque dui risus at sapien. Suspendisse at scelerisque ex, pharetra mollis neque. Suspendisse et
+                laoreet dui. Morbi est diam, posuere eget
+                dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Nam efficitur nisl magna,
+                et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales
+                magna ex, fringilla laoreet leo blandit nec.
+                Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum posuere sem, eget posuere
+                velit elementum eu.
+            </p>
         </article>
 
         <aside>
