--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
     <main>
         <form action="http://i-want-solar-energy.com/testform.php">
             <legend>Contact Us</legend>
-            <fieldset>                
+            <fieldset>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name">
                 <label for="email">Email:</label>
