Finish Desktop Layout Homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="img/logo.jpg" alt="">
+        <img src="img/logo.png" alt="Logo">
         <h1>
             Inholand Solar Energy
         </h1>
@@ -24,65 +24,132 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="howsolarworks.html">How solar works</a></li>
-            <li><a href="eusolar.html">Eu Solar</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="eusolar.html">EU Solar</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
 
-        <video src="" controls="hidden"></video>
+        <video src="video/solar.mp4"></video>
 
-        <section>
+        <section id="home-flex">
 
+            <section id="articles">
+                <article id="article-1">
+                    <h3>Product 1</h3>
+                    <section class="article-content">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra
+                            rutrum,
+                            urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis
+                            justo
+                            euismod pharetra. In hac habitasse platea dictumst.
+                            Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius
+                            ex,
+                            eu
+                            scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis,
+                            eu
+                            pellentesque dui risus at sapien. Suspendisse
+                            at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam,
+                            posuere
+                            eget
+                            dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia
+                            nostra,
+                            per inceptos himenaeos. Nam efficitur
+                            nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis
+                            feugiat.
+                            Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec
+                            velit
+                            et,
+                            aliquet dictum felis. Mauris elementum
+                            posuere sem, eget posuere velit elementum eu.
+                            <a href="externallink.html">Read more here</a>
+                        </p>
+                        <img src="img/product1.jpg" alt="Product 2" class="article-image">
+                    </section>
+
+                </article>
+
+                <article id="article-2">
+                    <h3>Product 2</h3>
+                    <section class="article-content">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra
+                            rutrum,
+                            urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis
+                            justo
+                            euismod pharetra. In hac habitasse platea dictumst.
+                            Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius
+                            ex,
+                            eu
+                            scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis,
+                            eu
+                            pellentesque dui risus at sapien. Suspendisse
+                            at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam,
+                            posuere
+                            eget
+                            dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia
+                            nostra,
+                            per inceptos himenaeos. Nam efficitur
+                            nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis
+                            feugiat.
+                            Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec
+                            velit
+                            et,
+                            aliquet dictum felis. Mauris elementum
+                            posuere sem, eget posuere velit elementum eu.
+                            <a href="externallink.html">Read more here</a>
+                        </p>
+                        <img src="img/product1.jpg" alt="Product 2" class="article-image">
+                    </section>
+                </article>
+
+                <article id="article-3">
+                    <h3>Product 3</h3>
+                    <section class="article-content">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra
+                            rutrum,
+                            urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis
+                            justo
+                            euismod pharetra. In hac habitasse platea dictumst.
+                            Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius
+                            ex,
+                            eu
+                            scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis,
+                            eu
+                            pellentesque dui risus at sapien. Suspendisse
+                            at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam,
+                            posuere
+                            eget
+                            dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia
+                            nostra,
+                            per inceptos himenaeos. Nam efficitur
+                            nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis
+                            feugiat.
+                            Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec
+                            velit
+                            et,
+                            aliquet dictum felis. Mauris elementum
+                            posuere sem, eget posuere velit elementum eu.
+                            <a href="externallink.html">Read more here</a>
+                        </p>
+                        <img src="img/product1.jpg" alt="Product 3" class="article-image">
+                    </section>
+                </article>
+
+            </section>
+            <aside class="aside-home">
+                <h4>5 Reasons to Use Solar Power</h4>
+                <ol>
+                    <li>good</li>
+                    <li>cheap</li>
+                    <li>green</li>
+                    <li>Reusable resource</li>
+                    <li>save money</li>
+                </ol>
+            </aside>
         </section>
-        <article>
-            <h3>Product 2</h3>
-            <img src="img/product1.jpg" alt="Product 2">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-                <a href="externallink.html">Read more here</a>
-            </p>
-        </article>
-
-        <article>
-            <h3>Product 2</h3>
-            <img src="img/product1.jpg" alt="Product 2">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-                <a href="externallink.html">Read more here</a>
-            </p>
-        </article>
-
-        <article>
-            <h3>Product 2</h3>
-            <img src="img/product1.jpg" alt="Product 3">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra rutrum, urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis justo euismod pharetra. In hac habitasse platea dictumst.
-                Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius ex, eu scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis, eu pellentesque dui risus at sapien. Suspendisse
-                at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam, posuere eget dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam efficitur
-                nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis feugiat. Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec velit et, aliquet dictum felis. Mauris elementum
-                posuere sem, eget posuere velit elementum eu.
-                <a href="externallink.html">Read more here</a>
-            </p>
-        </article>
-
-        <aside>
-            <ol>
-                <li>good</li>
-                <li>cheap</li>
-                <li>green</li>
-                <li>Reusable resource</li>
-                <li>save money</li>
-            </ol>
-        </aside>
     </main>
     <footer>
         <p>
