--- a/contact.html
+++ b/contact.html
@@ -30,18 +30,18 @@
     </nav>
     <main>
 
-        <fieldset>
-            <legend>Contact Us</legend>
-            <form action="http://i-want-solar-energy.com/testform.php">
+        <form action="http://i-want-solar-energy.com/testform.php" method="GET">
+            <fieldset>
+                <legend>Contact Us</legend>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email">
                 <label for="message">Message:</label>
                 <input type="text" id="message" name="message">
-                <input type="submit">
-            </form>
-        </fieldset>
+                <input type="submit" value="Submit">
+            </fieldset>
+        </form>
 
 
         <aside>
