--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -24,8 +24,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="howsolarworks.html">How solar works</a></li>
-            <li><a href="eusolar.html">Eu Solar</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="eusolar.html">EU Solar</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
