--- a/index.html
+++ b/index.html
@@ -36,105 +36,66 @@
 
             <section id="articles">
                 <article id="article-1">
-                    <h3>Product 1</h3>
+                    <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
                     <section class="article-content">
+                        <a href=": http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
+                                src="img/SmartSolar-MPPT-10030.png" alt="Product 2" class="article-image"></a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra
-                            rutrum,
-                            urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis
-                            justo
-                            euismod pharetra. In hac habitasse platea dictumst.
-                            Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius
-                            ex,
-                            eu
-                            scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis,
-                            eu
-                            pellentesque dui risus at sapien. Suspendisse
-                            at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam,
-                            posuere
-                            eget
-                            dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia
-                            nostra,
-                            per inceptos himenaeos. Nam efficitur
-                            nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis
-                            feugiat.
-                            Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec
-                            velit
-                            et,
-                            aliquet dictum felis. Mauris elementum
-                            posuere sem, eget posuere velit elementum eu.
-                            <a href="externallink.html">Read more here</a>
+                            A solar charger gathers energy from your solar panels, and stores it in your batteries.
+                            Using the latest, fastest technology, SmartSolar maximises this energy-harvest, driving it
+                            intelligently to achieve full charge in the shortest possible time.
+                            SmartSolar maintains battery health, extending its life.
+                            The SmartSolar charge controller will even recharge a severely depleted battery.
+                            It can operate with a battery voltage as low as 0 Volts, provided the cells are not
+                            permanently sulphated or otherwise damaged.
+                            <a
+                                href="https://www.victronenergy.com/solar-charge-controllers/smartsolar-100-30-100-50#pd-nav-image">Read
+                                more here</a>
                         </p>
-                        <img src="img/product1.jpg" alt="Product 2" class="article-image">
                     </section>
 
                 </article>
 
                 <article id="article-2">
-                    <h3>Product 2</h3>
+                    <h3>SMA SB3.6 Solar panels inverter 1 phase</h3>
                     <section class="article-content">
+                        <a href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer"><img
+                                src="img/sunny-boy-30-36-40-50-60.jpg" alt="Product 2" class="article-image"> </a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra
-                            rutrum,
-                            urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis
-                            justo
-                            euismod pharetra. In hac habitasse platea dictumst.
-                            Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius
-                            ex,
-                            eu
-                            scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis,
-                            eu
-                            pellentesque dui risus at sapien. Suspendisse
-                            at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam,
-                            posuere
-                            eget
-                            dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia
-                            nostra,
-                            per inceptos himenaeos. Nam efficitur
-                            nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis
-                            feugiat.
-                            Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec
-                            velit
-                            et,
-                            aliquet dictum felis. Mauris elementum
-                            posuere sem, eget posuere velit elementum eu.
-                            <a href="externallink.html">Read more here</a>
+                            Established product features and integrated software solutions will provide yield
+                            optimization throughout the system’s entire service life.
+                            Even in shading. SMA ShadeFix is a proprietary inverter software that optimizes energy yield
+                            in nearly every situation.
+                            SMA Smart Connected inverter monitoring offers enhanced safety by detecting errors at an
+                            early stage and automatically reporting them to the installer.
+                            <a href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer">Read more here</a>
                         </p>
-                        <img src="img/product1.jpg" alt="Product 2" class="article-image">
                     </section>
                 </article>
 
                 <article id="article-3">
-                    <h3>Product 3</h3>
+                    <h3>Victron 175Wp 12Volt Solar panel set</h3>
                     <section class="article-content">
+
+                        <a
+                            href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22"><img
+                                src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Product 3" class="article-image"></a>
+
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, diam id pharetra
-                            rutrum,
-                            urna nunc porttitor massa, sit amet pellentesque metus tellus at mauris. Ut congue nibh quis
-                            justo
-                            euismod pharetra. In hac habitasse platea dictumst.
-                            Nulla lorem libero, scelerisque eget tincidunt nec, pharetra a magna. Vestibulum id varius
-                            ex,
-                            eu
-                            scelerisque ex. Curabitur euismod, libero non convallis aliquam, elit urna pharetra turpis,
-                            eu
-                            pellentesque dui risus at sapien. Suspendisse
-                            at scelerisque ex, pharetra mollis neque. Suspendisse et laoreet dui. Morbi est diam,
-                            posuere
-                            eget
-                            dictum vitae, malesuada id diam. Class aptent taciti sociosqu ad litora torquent per conubia
-                            nostra,
-                            per inceptos himenaeos. Nam efficitur
-                            nisl magna, et sollicitudin lectus vulputate at. Duis molestie ante sit amet nunc convallis
-                            feugiat.
-                            Aenean sodales magna ex, fringilla laoreet leo blandit nec. Maecenas dui nisl, luctus nec
-                            velit
-                            et,
-                            aliquet dictum felis. Mauris elementum
-                            posuere sem, eget posuere velit elementum eu.
-                            <a href="externallink.html">Read more here</a>
+                            Solar charge controllers Steca Solarix 2525 and 4040 are newly developed products based on
+                            the internationally renowned controller family Steca PR.
+                            With increased module and load current, the controllers are now also suitable for even
+                            larger systems.
+                            The devices also feature an integrated USB charging port for charging smartphones and
+                            tablets.
+                            Use of the latest charging technologies combined with state of charge determination enable
+                            optimal battery maintenance and module power monitoring.
+                            A large display informs the user about all operating modes with the aid of symbols.
+                            The state of charge is represented visually as a level meter. Data such as voltage, current
+                            and state of charge can also be displayed digitally as figures on the display.
+                            In addition, the controller has an energy meter which can be reset by the user.
+                            <a href="https://www.steca.com/index.php?Steca-Solarix-en">Read more here</a>
                         </p>
-                        <img src="img/product1.jpg" alt="Product 3" class="article-image">
                     </section>
                 </article>
 
